--- a/Socket Debugger/MainWindow.xaml
+++ b/Socket Debugger/MainWindow.xaml
@@ -5,8 +5,48 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Socket_Debugger"
         mc:Ignorable="d"
-        Title="欢迎使用Socket Debugger" FontWeight="Normal" FontStyle="Normal" FontSize="20" Height="600" Width="800">
-    <Grid>
-        
+        ResizeMode="CanMinimize"
+        Title="欢迎使用Socket Debugger" Height="600" Width="800">
+    <Grid x:Name="FirstGridView">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition />
+            <ColumnDefinition />
+            <ColumnDefinition />
+            <ColumnDefinition />
+        </Grid.ColumnDefinitions>
+        <ListView Name="FirstListView" Grid.Column="0" />
+        <ListView Name="SecondListView" Grid.Column="1" Background="White" />
+        <Grid Grid.Column="2" ColumnSpan="2" Background="White">
+            <Grid.RowDefinitions>
+                <RowDefinition />
+                <RowDefinition />
+                <RowDefinition />
+                <RowDefinition />
+                <RowDefinition />
+            </Grid.RowDefinitions>
+            <Grid Name="TipGrid" Grid.Row="0" RowSpan="2">
+                <Grid.RowDefinitions>
+                    <RowDefinition />
+                    <RowDefinition />
+                    <RowDefinition />
+                    <RowDefinition />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition />
+                    <ColumnDefinition />
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+                <Label Grid.Row="0" Grid.Column="0" Margin="10,10,0,10" Content="服务器" HorizontalAlignment="Left" />
+                <Button Grid.Row="0" Grid.Column="2" Margin="10,0,0,10">编辑</Button>
+
+                <Label Grid.Row="1" Grid.Column="0" Margin="10,10,0,10" Content="111.198.10.15:12208" />
+                <Button Grid.Row="1" Grid.Column="2" Margin="10,10,0,10">连接</Button>
+
+                <Label Grid.Row="2" Grid.Column="0" Margin="10,10,0,10" Content="111.198.10.15:12208" />
+                <Button Grid.Row="2" Grid.Column="2" Margin="10,10,0,10">清空消息</Button>
+            </Grid>
+            <Grid Name="MessageGrid" Grid.Row="1" RowSpan="3" />
+            <Grid Name="SendGrid" Grid.Row="4" />
+        </Grid>
     </Grid>
 </Window>
