--- a/Socket Debugger/MainWindow.xaml
+++ b/Socket Debugger/MainWindow.xaml
@@ -3,50 +3,53 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Socket_Debugger"
         mc:Ignorable="d"
         ResizeMode="CanMinimize"
         Title="欢迎使用Socket Debugger" Height="600" Width="800">
-    <Grid x:Name="FirstGridView">
+    <Grid Width="Auto" Height="Auto">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition />
-            <ColumnDefinition />
-            <ColumnDefinition />
-            <ColumnDefinition />
+            <ColumnDefinition Width="2*" />
+            <ColumnDefinition Width="2*" />
+            <ColumnDefinition Width="5*" />
         </Grid.ColumnDefinitions>
-        <ListView Name="FirstListView" Grid.Column="0" />
-        <ListView Name="SecondListView" Grid.Column="1" Background="White" />
-        <Grid Grid.Column="2" ColumnSpan="2" Background="White">
+        <ListView Grid.Column="0" Name="FirstListView" />
+        <ListView Grid.Column="1" Name="SecondListView" />
+        <Grid Grid.Column="2">
             <Grid.RowDefinitions>
-                <RowDefinition />
-                <RowDefinition />
-                <RowDefinition />
-                <RowDefinition />
-                <RowDefinition />
+                <RowDefinition Height="2*" />
+                <RowDefinition Height="5*" />
+                <RowDefinition Height="2*" />
             </Grid.RowDefinitions>
-            <Grid Name="TipGrid" Grid.Row="0" RowSpan="2">
+            <Grid Grid.Row="0" Name="TopDockPanel">
                 <Grid.RowDefinitions>
-                    <RowDefinition />
-                    <RowDefinition />
-                    <RowDefinition />
-                    <RowDefinition />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition />
-                    <ColumnDefinition />
-                    <ColumnDefinition />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
-                <Label Grid.Row="0" Grid.Column="0" Margin="10,10,0,10" Content="服务器" HorizontalAlignment="Left" />
-                <Button Grid.Row="0" Grid.Column="2" Margin="10,0,0,10">编辑</Button>
 
-                <Label Grid.Row="1" Grid.Column="0" Margin="10,10,0,10" Content="111.198.10.15:12208" />
-                <Button Grid.Row="1" Grid.Column="2" Margin="10,10,0,10">连接</Button>
+                <Label Grid.Row="0" Grid.Column="0" Name="ServerLabel" HorizontalAlignment="Left"
+                       Foreground="Black" FontWeight="Bold" FontSize="16" Content="服务器" />
+                <Label Grid.Row="1" Grid.Column="0" Name="HostLabel" Content="111.198.10.15:12208" />
 
-                <Label Grid.Row="2" Grid.Column="0" Margin="10,10,0,10" Content="111.198.10.15:12208" />
-                <Button Grid.Row="2" Grid.Column="2" Margin="10,10,0,10">清空消息</Button>
+                <CheckBox Grid.Row="3" Grid.Column="0" HorizontalAlignment="Left" Margin="10 ,0,0,0" Content="未连接" />
+
+                <Button Grid.Row="0" Grid.Column="2" Name="EditButton" HorizontalAlignment="Right" Margin="0,5,5,0"
+                        Foreground="Black" Content="编辑" />
+                <Button Grid.Row="1" Grid.Column="2" Name="ConnectButton" HorizontalAlignment="Right" Margin="0,5,5,0"
+                        Foreground="Black" Content="连接" />
+                <Button Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" Height="18" Name="EmptyButton"
+                        Visibility="Hidden" />
+                <Button Grid.Row="3" Grid.Column="2" Name="ClearButton" Margin="0,0,5,5"
+                        Foreground="Black" Content="清空消息" />
             </Grid>
-            <Grid Name="MessageGrid" Grid.Row="1" RowSpan="3" />
-            <Grid Name="SendGrid" Grid.Row="4" />
+            <DockPanel Grid.Row="1" />
+            <DockPanel Grid.Row="2" />
         </Grid>
     </Grid>
 </Window>
