--- a/Socket Debugger/MainWindow.xaml
+++ b/Socket Debugger/MainWindow.xaml
@@ -1,32 +1,28 @@
-﻿<Window x:Class="Socket_Debugger.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Socket_Debugger"
-        mc:Ignorable="d"
-        ResizeMode="CanMinimize"
-        Title="Socket Debugger" Height="600" Width="800" FontSize="18" WindowStartupLocation="CenterScreen">
+﻿<Window
+    x:Class="Socket_Debugger.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="Socket Debugger"
+    Width="915"
+    Height="612"
+    Background="#EEE9ED"
+    FontSize="18"
+    ResizeMode="CanMinimize"
+    WindowStartupLocation="CenterScreen"
+    mc:Ignorable="d">
 
     <Grid Width="Auto" Height="Auto">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="2*" />
-            <ColumnDefinition Width="2*" />
-            <ColumnDefinition Width="5*" />
+            <ColumnDefinition Width="1.65*" />
+            <ColumnDefinition Width="1.95*" />
+            <ColumnDefinition Width="5.00*" />
         </Grid.ColumnDefinitions>
 
-        <!--左边功能列表-->
-        <ListView Grid.Column="0" x:Name="FuncListView" ItemsSource="F">
-            <ListView.Background>
-                <LinearGradientBrush>
-                    <LinearGradientBrush.GradientStops>
-                        <GradientStop Offset="0.3" Color="#E8D5D1" />
-                        <GradientStop Offset="0.7" Color="#E3D0E3" />
-                    </LinearGradientBrush.GradientStops>
-                </LinearGradientBrush>
-            </ListView.Background>
-
-            <!--去掉ListView顶部Header-->
+        <!--  左边功能列表  -->
+        <ListView x:Name="FuncListView" Grid.Column="0">
+            <!--  去掉ListView顶部Header  -->
             <ListView.Resources>
                 <Style TargetType="{x:Type GridViewColumnHeader}">
                     <Setter Property="Visibility" Value="Collapsed" />
@@ -40,17 +36,17 @@
                             <DataTemplate>
                                 <StackPanel Margin="-13,-5,5,-5" Orientation="Horizontal">
                                     <Image
-                                        Width="40"
-                                        Height="40"
-                                        Margin="0,0,10,0"
+                                        Width="35"
+                                        Height="35"
+                                        Margin="0,0,8,0"
                                         Source="{Binding ItemImage}" />
                                     <TextBlock
                                         Grid.Column="1"
-                                        FontSize="14"
-                                        Foreground="Black"
                                         VerticalAlignment="Center"
-                                        TextWrapping="Wrap"
-                                        Text="{Binding ItemTitle}" />
+                                        FontSize="17"
+                                        Foreground="Black"
+                                        Text="{Binding ItemTitle}"
+                                        TextWrapping="Wrap" />
                                 </StackPanel>
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
@@ -59,44 +55,18 @@
             </ListView.View>
         </ListView>
 
-        <!--中间用户自定义功能列表-->
-        <DockPanel Grid.Column="1" LastChildFill="true">
-            <Grid DockPanel.Dock="Bottom" Height="Auto">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="3*" />
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
-                <Button
-                    Grid.Column="0"
-                    Visibility="Hidden" />
-
-                <Button
-                    Grid.Column="1"
-                    x:Name="AddButton"
-                    Content="+"
-                    BorderBrush="White"
-                    FontWeight="Bold"
-                    Background="White"
-                    HorizontalAlignment="Right" />
-
-                <Button
-                    Grid.Column="2"
-                    x:Name="DelButton"
-                    Content="-"
-                    BorderBrush="White"
-                    FontWeight="Bold"
-                    Background="White"
-                    HorizontalAlignment="Right" />
-            </Grid>
+        <!--  中间用户自定义功能列表  -->
+        <Grid Grid.Column="1" Margin="0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="15*" />
+                <RowDefinition Height="1*" />
+            </Grid.RowDefinitions>
 
             <Grid
-                DockPanel.Dock="Top"
-                Background="White">
-
-                <ListView
-                    x:Name="SecondListView"
-                    Visibility="Collapsed" />
+                Grid.Row="0"
+                Margin="0,1,0,0"
+                Background="#FFFFFF">
+                <ListView x:Name="SecondListView" Visibility="Collapsed" />
 
                 <StackPanel
                     x:Name="EmptyPanel"
@@ -110,34 +80,67 @@
                         Visibility="Visible" />
 
                     <TextBlock
-                        HorizontalAlignment="Center"
                         Margin="10,10,10,5"
-                        TextWrapping="Wrap"
+                        HorizontalAlignment="Center"
+                        FontSize="13"
                         Text="没有已存在配置"
-                        FontSize="13" />
+                        TextWrapping="Wrap" />
 
                     <TextBlock
-                        HorizontalAlignment="Center"
                         Margin="10,5,10,5"
-                        TextWrapping="Wrap"
+                        HorizontalAlignment="Center"
+                        FontSize="13"
                         Text="点击下方 + 按钮添加配置"
-                        FontSize="13" />
+                        TextWrapping="Wrap" />
                 </StackPanel>
             </Grid>
-        </DockPanel>
 
-        <!--右边TCP/UDP等通信界面-->
-        <Grid Grid.Column="2">
+            <Grid
+                Grid.Row="1"
+                Height="Auto"
+                Margin="0,1,0,0"
+                Background="#FFFFFF">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="4.5*" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+
+                <Button
+                    x:Name="AddButton"
+                    Grid.Column="1"
+                    Width="30"
+                    Padding="0"
+                    HorizontalAlignment="Center"
+                    Background="White"
+                    BorderBrush="White"
+                    Content="+"
+                    FontSize="16"
+                    FontWeight="Bold" />
+
+                <Button
+                    x:Name="DelButton"
+                    Grid.Column="2"
+                    Width="30"
+                    Padding="0"
+                    HorizontalAlignment="Center"
+                    Background="White"
+                    BorderBrush="White"
+                    Content="-"
+                    FontSize="16"
+                    FontWeight="Bold" />
+            </Grid>
+        </Grid>
+
+        <!--  右边TCP/UDP等通信界面  -->
+        <Grid Grid.Column="2" Margin="1,0,0,0">
             <Grid.RowDefinitions>
                 <RowDefinition Height="2*" />
                 <RowDefinition Height="5.5*" />
                 <RowDefinition Height="1.5*" />
             </Grid.RowDefinitions>
-            <!--顶部IP等配置信息-->
-            <Grid Grid.Row="0" x:Name="TopDockPanel">
-                <Grid.Background>
-                    <SolidColorBrush Color="#F4EEEE" />
-                </Grid.Background>
+            <!--  顶部IP等配置信息  -->
+            <Grid x:Name="TopPanel" Grid.Row="0">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="Auto" />
@@ -151,51 +154,52 @@
                 </Grid.ColumnDefinitions>
 
                 <TextBlock
+                    x:Name="ServerTextBlock"
                     Grid.Row="0"
                     Grid.Column="0"
-                    x:Name="ServerTextBlock"
+                    Margin="10,0,0,0"
                     HorizontalAlignment="Left"
                     VerticalAlignment="Center"
-                    Margin="10 ,0,0,0"
-                    Foreground="Black"
-                    FontWeight="Bold"
                     FontSize="15"
+                    FontWeight="Bold"
+                    Foreground="Black"
                     Text="服务器" />
 
                 <TextBlock
+                    x:Name="HostTextBlock"
                     Grid.Row="1"
                     Grid.Column="0"
-                    x:Name="HostTextBlock"
+                    Margin="10,0,0,0"
+                    VerticalAlignment="Top"
                     FontSize="13"
-                    Text="111.198.10.15:12208"
-                    Margin="10 ,0,0,0" VerticalAlignment="Top" />
+                    Text="111.198.10.15:12208" />
 
                 <RadioButton
+                    x:Name="StatusTextBlock"
                     Grid.Row="3"
                     Grid.Column="0"
-                    x:Name="StatusTextBlock"
-                    IsChecked="True"
+                    Margin="10,0,0,0"
                     HorizontalAlignment="Left"
-                    Margin="10 ,0,0,0"
-                    Content="已连接" />
+                    Content="已连接"
+                    IsChecked="True" />
 
                 <Button
+                    x:Name="EditButton"
                     Grid.Row="0"
                     Grid.Column="2"
-                    x:Name="EditButton"
-                    HorizontalAlignment="Right"
                     Margin="0,5,5,0"
-                    Foreground="Black"
-                    Content="编辑" />
+                    HorizontalAlignment="Right"
+                    Content="编辑"
+                    Foreground="Black" />
 
                 <Button
+                    x:Name="ConnectButton"
                     Grid.Row="1"
                     Grid.Column="2"
-                    x:Name="ConnectButton"
-                    HorizontalAlignment="Right"
                     Margin="0,5,5,0"
-                    Foreground="Black"
-                    Content="连接" />
+                    HorizontalAlignment="Right"
+                    Content="连接"
+                    Foreground="Black" />
 
                 <Button
                     Grid.Row="2"
@@ -205,54 +209,66 @@
                     Visibility="Hidden" />
 
                 <Button
+                    x:Name="ClearButton"
                     Grid.Row="3"
                     Grid.Column="2"
-                    x:Name="ClearButton"
                     Margin="0,0,5,5"
-                    Foreground="Black"
-                    Content="清空消息" />
+                    Content="清空消息"
+                    Foreground="Black" />
             </Grid>
 
-            <!--中间通信界面-->
-            <DockPanel Grid.Row="1" />
+            <!--  中间通信界面  -->
+            <DockPanel Grid.Row="1" Background="#FFFFFF" />
 
-            <!--底部用户通信输入栏-->
-            <Grid Grid.Row="2">
+            <!--  底部用户通信输入栏  -->
+            <Grid Grid.Row="2" Background="#FFFFFF">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="1.5*" />
                     <RowDefinition Height="3*" />
                 </Grid.RowDefinitions>
-                <StackPanel Grid.Row="0" x:Name="SelectPanel" Orientation="Horizontal">
+                <StackPanel
+                    x:Name="SelectPanel"
+                    Grid.Row="0"
+                    Orientation="Horizontal">
                     <StackPanel.Background>
                         <SolidColorBrush Color="#ECECEC" />
                     </StackPanel.Background>
                     <RadioButton
                         x:Name="TextRadioButton"
-                        IsChecked="True"
+                        Margin="10,0,0,0"
                         Content="文本"
-                        Margin="10,0,0,0" />
+                        IsChecked="True" />
 
                     <RadioButton
                         x:Name="HexRadioButton"
-                        Content="16进制"
-                        Margin="20,0,0,0" />
+                        Margin="15,0,0,0"
+                        Content="16进制" />
                 </StackPanel>
 
                 <TextBox
                     Grid.Row="1"
-                    VerticalContentAlignment="Top"
-                    TextWrapping="Wrap"
-                    FontSize="13"
                     Padding="3"
+                    VerticalContentAlignment="Top"
                     AcceptsReturn="True"
+                    FontSize="13"
+                    TextWrapping="Wrap"
                     VerticalScrollBarVisibility="Visible">
 
                     <TextBox.Resources>
-                        <VisualBrush x:Key="HintText" TileMode="None" Opacity="0.3" Stretch="None" AlignmentX="Left"
-                                     AlignmentY="Top">
+                        <VisualBrush
+                            x:Key="HintText"
+                            AlignmentX="Left"
+                            AlignmentY="Top"
+                            Opacity="0.3"
+                            Stretch="None"
+                            TileMode="None">
                             <VisualBrush.Visual>
-                                <!--必须设置Background，否则Padding无效-->
-                                <TextBlock Text="请输入要发送的数据" FontSize="13" Padding="3" Background="#00FFFFFF" />
+                                <!--  必须设置Background，否则Padding无效  -->
+                                <TextBlock
+                                    Padding="3"
+                                    Background="#00FFFFFF"
+                                    FontSize="13"
+                                    Text="请输入要发送的数据" />
                             </VisualBrush.Visual>
                         </VisualBrush>
                     </TextBox.Resources>
