--- a/Socket Debugger/MainWindow.xaml
+++ b/Socket Debugger/MainWindow.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:hc="https://handyorg.github.io/handycontrol"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="Socket Debugger"
     Width="915"
@@ -114,6 +115,7 @@
                     HorizontalAlignment="Center"
                     Background="White"
                     BorderBrush="White"
+                    Click="AddButton_Click"
                     Content="+"
                     FontSize="16"
                     FontWeight="Bold" />
@@ -126,14 +128,17 @@
                     HorizontalAlignment="Center"
                     Background="White"
                     BorderBrush="White"
+                    Click="DelButton_Click"
                     Content="-"
                     FontSize="16"
                     FontWeight="Bold" />
             </Grid>
         </Grid>
 
-        <!--  右边TCP/UDP等通信界面  -->
-        <Grid Grid.Column="2" Margin="1,0,0,0">
+        <Grid
+            Grid.Column="2"
+            Margin="1,0,0,0"
+            Background="#EEEEEE">
             <Grid.RowDefinitions>
                 <RowDefinition Height="2*" />
                 <RowDefinition Height="5.5*" />
@@ -221,29 +226,33 @@
             <DockPanel Grid.Row="1" Background="#FFFFFF" />
 
             <!--  底部用户通信输入栏  -->
-            <Grid Grid.Row="2" Background="#FFFFFF">
+            <Grid
+                Grid.Row="2"
+                Margin="0,1,0,0"
+                Background="#FFFFFF">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="1.5*" />
+                    <RowDefinition Height="Auto" />
                     <RowDefinition Height="3*" />
                 </Grid.RowDefinitions>
-                <StackPanel
-                    x:Name="SelectPanel"
-                    Grid.Row="0"
-                    Orientation="Horizontal">
-                    <StackPanel.Background>
-                        <SolidColorBrush Color="#ECECEC" />
-                    </StackPanel.Background>
-                    <RadioButton
-                        x:Name="TextRadioButton"
-                        Margin="10,0,0,0"
-                        Content="文本"
-                        IsChecked="True" />
+                <DockPanel LastChildFill="True">
+                    <hc:ButtonGroup
+                        Grid.Row="0"
+                        VerticalAlignment="Center"
+                        Background="#EEEEEE">
+                        <Button
+                            x:Name="TextRadioButton"
+                            BorderThickness="0"
+                            Content="文本" />
 
-                    <RadioButton
-                        x:Name="HexRadioButton"
-                        Margin="15,0,0,0"
-                        Content="16进制" />
-                </StackPanel>
+                        <Button
+                            x:Name="HexRadioButton"
+                            BorderThickness="0"
+                            Content="16进制" />
+                    </hc:ButtonGroup>
+
+                    <!--  占位  -->
+                    <hc:Empty />
+                </DockPanel>
 
                 <TextBox
                     Grid.Row="1"
@@ -274,7 +283,7 @@
                     </TextBox.Resources>
 
                     <TextBox.Style>
-                        <Style TargetType="TextBox">
+                        <Style TargetType="{x:Type TextBox}">
                             <Style.Triggers>
                                 <Trigger Property="Text" Value="">
                                     <Setter Property="Background" Value="{StaticResource HintText}" />
